force-app/main/default/objects/Case/fields/Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Latitude__c</fullName>
    <label>Location Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>