force-app/main/default/objects/Case/fields/Location_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Longitude__c</fullName>
    <label>Location Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>