force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <label>SLA Status</label>
    <formula>IF(IsClosed, "Closed", IF(ISBLANK(SLA_Deadline__c), "No SLA", IF(NOW() &gt; SLA_Deadline__c, "Breached", IF((SLA_Deadline__c - NOW()) * 24 &lt; 1, "At Risk", "On Track"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>